# valorant-store-tracker

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  helpers.rs  history.rs  lib.rs  main.rs  store.rs
src-tauri/valorant-api/: Cargo.toml
src-tauri/valorant-api/src/: client.rs  config.rs  endpoints.rs  errors.rs  lib.rs
src-tauri/valorant-api/src/http/: mod.rs  reqwest.rs
src-tauri/valorant-api/src/models/: mod.rs
src/components/: CurrentMatch.tsx  Home.tsx  Login.tsx  MatchHistory.tsx  Store.tsx
src/components/auth/: LoginScreen.tsx
src/components/common/: Header.tsx  LoadingScreen.tsx
src/components/history/: Match.tsx  Matches.tsx
src/components/store/: CurrencyBar.tsx  Header.tsx  StoreCountdown.tsx  StoreItemCard.tsx  StoreItems.tsx  StorePlaceholder.tsx
src/history/: processHistoryData.ts  types.ts
src/hooks/: useHistoryData.ts  useStoreData.ts  useTimer.ts  useUserData.ts
src/store/: processStoreData.ts  types.ts
