[package]
name = "valorant-api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
async-trait = "0.1.88"

reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"], optional = true }

[features]
default = []
reqwest = ["dep:reqwest"]
